# Calculate-Pi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
assets/: generate_screenshots.py  help.txt  pi_100.txt  pi_1000.txt  pi_1000_stats.txt
include/cpi/: app.hpp  bigint.hpp  bigint_multiply.hpp  chudnovsky.hpp  cli.hpp  concurrency.hpp  expected.hpp  io.hpp  sysinfo.hpp
res/: Calculate-Pi.manifest  Calculate-Pi.rc  resource.h.in
src/: app.cpp  bigint.cpp  bigint_multiply.cpp  chudnovsky.cpp  cli.cpp  concurrency.cpp  io.cpp  sysinfo.cpp
